set hierarchical parent of userlist to MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gennakersystems.diffhub.MainActivity"
+                />
         </activity>
     </application>
 
